--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       "logo": "https://www.mypalletliquidationcenter.com/logo.png",
       "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "+1-541-515-7780",
+        "email": "palletkingmj01@gmail.com",
         "contactType": "Customer Service"
       },
       "address": {
